--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href="https://www.linkedin.com/in/rahul-sharma-99004648"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-  <a href="https://www.facebook.com/rabbinso1"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-  <a href="https://github.com/mrahul001"><i class="fa fa-github w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/rahul-sharma-99004648" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+  <a href="https://www.facebook.com/rabbinso1" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+  <a href="https://github.com/mrahul001" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
  <!--  <i class="fa fa-instagram w3-hover-opacity"><a href=""></a></i>
   <i class="fa fa-snapchat w3-hover-opacity"><a href=""></a></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"><a href=""></a></i>
