--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <body class="w3-light-grey">
 
 <!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1400px;">
+<div class="w3-content w3-margin-top" style="max-width:1400px">
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="images/pp.jpeg" style="width:100%" alt="myPic">
+          <img src="images/pp.jpeg" style="width:100% ; border-top-left-radius: 4px;" alt="rahul_sharma">
           <div class="w3-display-bottomleft w3-container w3-text-sand">
             <h2>Rahul Sharma</h2>
           </div>
@@ -45,24 +45,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
               <div class="w3-center w3-text-white">65%</div>
             </div>
           </div>
-          <p>HTML5 & CSS3</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:55%">55%</div>
-          </div>
           <p>MongoDB & MySQL</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
           </div>
+          <p>HTML5 & CSS3</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:55%">55%</div>
+          </div>
+          <p>JavaScript</p>
+          <div class="w3-light-grey w3-round-xlarge w3-small">
+            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width: 50%">50%</div>
+          </div>
           <br>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-          <p>English</p>
-          <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal w3-center" style="height:24px;width:80%">80%</div>
-          </div>
           <p>Hindi</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal w3-center" style="height:24px;width:95%">95%</div>
+          </div>
+          <p>English</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-teal w3-center" style="height:24px;width:80%">80%</div>
           </div>
           <p>German</p>
           <div class="w3-light-grey w3-round-xlarge">
@@ -125,7 +129,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div>
 
       <div class="w3-container w3-card w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-university fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Uttar Pradesh Technical University</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2011-2015</h6>
@@ -155,14 +159,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
-  <p>Find me on social media.</p>
-  <a href="https://www.linkedin.com/in/rahul-sharma-99004648" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-  <a href="https://www.facebook.com/rabbinso1" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-  <a href="https://github.com/mrahul001" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+  <p><b>Find me on social media.</b></p>
+  <a href="https://www.linkedin.com/in/rahul-sharma-99004648" target="_blank"><i class="fa fa-linkedin w3-hover-opacity fa-2x"></i></a>
+  <a href="https://www.facebook.com/rabbinso1" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity fa-2x"></i></a>
+  <a href="https://github.com/mrahul001" target="_blank"><i class="fa fa-github w3-hover-opacity fa-2x"></i></a>
  <!--  <i class="fa fa-instagram w3-hover-opacity"><a href=""></a></i>
   <i class="fa fa-snapchat w3-hover-opacity"><a href=""></a></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"><a href=""></a></i>
   <i class="fa fa-twitter w3-hover-opacity"><a href=""></a></i> -->
+  <br>
 </footer>
 </body>
 </html>
