--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <!-- Right Column -->
     <div class="w3-twothird">
-    
       <div class="w3-container w3-card w3-white w3-margin-bottom">
+        <button class="w3-tag w3-teal w3-round w3-opacity" type="submit" style="position:fixed;margin-left:700px ; border: none; background: none" onclick="window.open('RahulResume.pdf' , '_blank');"><i class="fa fa-download fa-lg">&nbsp Resume</i></button>
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Software Engineer / <a href="http://www.findnsecure.com" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Software Engineer / <a href="http://www.findnsecure.com" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Feb 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <div class="w3-text-grey">
             <p>Curently looks after the following thing :</p>
@@ -101,7 +101,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Linux System Admin / <a href="https://www.qlicket.com/" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Qlicket.inc</a></b></h5>
+          <h5 class="w3-opacity"><b>Linux System Admin / <a href="https://www.qlicket.com/" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Qlicket.inc</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Jan 2017</h6>
           <div class="w3-text-grey">
           <p>My current roles & responsibilities are mentioned below:</p>
@@ -115,7 +115,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Technical Analyst / <a href="http://www.findnsecure.com" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Technical Analyst / <a href="http://www.findnsecure.com" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>July 2015 - May 2016</h6>
           <div class="w3-text-grey">
           <p>Profile was technical analyst and roles & responsibilities are mentioned below: </p>
