--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <!-- Right Column -->
     <div class="w3-twothird">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <button class="w3-tag w3-teal w3-round w3-opacity" type="submit" style="position:fixed;margin-left:700px ; border: none; background: none" onclick="window.open('RahulResume.pdf' , '_blank');"><i class="fa fa-download fa-lg">&nbsp Resume</i></button>
+      <form>
+        <button class="w3-tag w3-teal w3-round w3-opacity" type="submit" style="position:fixed;margin-left:700px ; border: none; background: none" onclick="window.open('rahulSharma_CV.pdf' , '_blank');"><i class="fa fa-download fa-lg">&nbsp Resume</i></button>
+        </form>
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Software Engineer / <a href="http://www.findnsecure.com" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
