--- a/index.html
+++ b/index.html
@@ -103,13 +103,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Linux System Admin / <a href="https://www.qlicket.com/" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Qlicket.inc</a></b></h5>
+          <h5 class="w3-opacity"><b>Linux System Admin / <a href="http://www.findnsecure.com" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Jan 2017</h6>
           <div class="w3-text-grey">
           <p>My current roles & responsibilities are mentioned below:</p>
             <ul>
-              <li>Designing the <b>network controller</b>,</li>
-              <li>Configure the controller according to the requirement of the network and build-in software,</li>
+              <li>Ubuntu server deployment, DNS server, SAMBA, VNC, webmin installation and 
+configuration.,</li>
+              <li>Different packages like ​ LAMP server​ installation, database like MongoDB 
+installation and configuration. build-in software,</li>
               <li>Regular <b>system administration</b>, troubleshoot & Applying kernel updates as needed on the deployed controller server on the client-end remotely,</li>
               <li>Identify and resolve any <b>network or server</b> related problems working in conjunction with the International and domestic clients or sysadmin at client's end over phone or via E-mail.</li>
             </ul>
