--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
       <div class="w3-container w3-card w3-white w3-margin-bottom">
       <form>
-        <button class="w3-tag w3-teal w3-round w3-opacity" type="submit" style="position:fixed;margin-left:700px ; border: none; background: none" onclick="window.open('rahulSharma_CV.pdf' , '_blank');"><i class="fa fa-download fa-lg">&nbsp Resume</i></button>
+        <a href="#"> <button class="w3-tag w3-teal w3-round w3-opacity" type="submit" style="position:fixed;margin-left:700px ; border: none; background: none" onclick="window.open('rahulSharma_CV_NEW.pdf' , '_blank');"><i class="fa fa-download fa-lg">&nbsp Resume</i></button></a>
         </form>
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
@@ -98,7 +98,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                   <li>Writing scripts in JavaScript( for <b>MongoDB</b>) and in <b>BASH scripting</b> to perform different Linux system operations as well database operations.</li>
                   <li>Using <b>wireshark network tool</b>- to capture packets and manipulating and implementing existing <b>C++</b> code to retrieve new information from packets to use on tracking portal.</li>  
                   <li>Integrating new hardware protocols to support and fetch data to get it available on web portal.</li>
-              </ul>
+              </ul>s
             </div>
           <hr>
         </div>
