--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div>
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>Linux System Admin / <a href="http://www.findnsecure.com" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Findnsecure.com</a></b></h5>
+          <h5 class="w3-opacity"><b>Linux System Admin / <a href="https://www.qlicket.com/" target="_blank" style="text-decoration:none ; border-bottom: 1px dotted #33FF71">Qlicket Inc.</a></b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Jan 2017</h6>
           <div class="w3-text-grey">
           <p>My current roles & responsibilities are mentioned below:</p>
